syntax = "proto3";

option java_package = "com.masaiqi.grpc";
option java_multiple_files = true;

// 通用异常处理信息
message ErrorInfo {

  // 错误的业务编码
  string errorCode  = 1;

  // 默认提示信息
  string defaultMsg = 2;
}